Stayed true never switched sides. Logo Max width 345 (+2)

--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -56,6 +56,8 @@ $space-15:		    15px;
 	margin-top: $space-15;
 	margin-right: auto;
 	margin-left: auto;
+	width: 80%;
+	max-width: 347px;
 }
 
 .text-center {
