--- a/css/drake.css
+++ b/css/drake.css
@@ -169,6 +169,7 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -297,6 +298,8 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -416,13 +419,13 @@ th {
   background-image: url(../img/arrow.svg);
   background-color: transparent;
   background-repeat: no-repeat;
-  background-size: 50px;
   width: 50px;
-  height: 50px;
+  height: 40px;
   border: 0;
-  top: 25%;
-  left: 65%;
-  position: absolute; }
+  position: absolute;
+  right: 9%;
+  top: 50%;
+  transform: translateY(-139%); }
 
 small {
   font-size: 16px;
@@ -446,12 +449,10 @@ input.ipsum {
   text-align: center;
   width: 80%;
   max-width: 500px;
-  -webkit-transition: border .5s ease-in-out;
-          transition: border .5s ease-in-out; }
+  transition: border .5s ease-in-out; }
   input.ipsum:focus {
     border: 1px solid #a39161;
-    -webkit-transition: border .5s ease-in-out;
-            transition: border .5s ease-in-out; }
+    transition: border .5s ease-in-out; }
 
 input:focus {
   outline: none; }
@@ -459,11 +460,11 @@ input:focus {
 p {
   font-family: "Range Mono", Helvetica Neue, sans;
   color: #333;
-  line-height: 2;
-  max-width: 500px;
+  line-height: 1.6;
+  max-width: 600px;
   margin-left: auto;
   margin-right: auto;
-  font-size: 20px; }
+  font-size: 18px; }
 
 .ipsum-text {
   padding: 25px; }
@@ -487,3 +488,8 @@ footer {
   footer small {
     margin-top: 15px;
     color: #fff; }
+
+form {
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative; }
