--- a/css/drake.css
+++ b/css/drake.css
@@ -297,8 +297,6 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -496,7 +494,8 @@ footer {
   footer .button {
     margin-top: 0; }
   footer a {
-    color: #fff; }
+    color: #fff;
+    text-decoration: none !important; }
   footer hr {
     margin-top: 25px;
     margin-bottom: 25px;
