--- a/css/drake.css
+++ b/css/drake.css
@@ -169,6 +169,7 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -297,6 +298,8 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -387,8 +390,11 @@ th {
 
 .bg-cloud {
   background-color: #f8f8f8;
-  padding: 25px; }
+  padding: 15px; }
 
+@media all and (min-width: 600px) {
+  .bg-cloud {
+    padding: 25px; } }
 .ovo-logo {
   max-width: 80px;
   text-align: center;
@@ -423,8 +429,7 @@ th {
   right: 9%;
   top: 50%;
   -webkit-transform: translateY(-139%);
-      -ms-transform: translateY(-139%);
-          transform: translateY(-139%); }
+  transform: translateY(-139%); }
 
 small {
   font-size: 16px;
@@ -448,13 +453,11 @@ input.ipsum {
   text-align: center;
   width: 80%;
   max-width: 500px;
-  -webkit-transition: border .5s ease-in-out;
-          transition: border .5s ease-in-out;
+  transition: border .5s ease-in-out;
   color: #333; }
   input.ipsum:focus {
     border: 1px solid #a39161;
-    -webkit-transition: border .5s ease-in-out;
-            transition: border .5s ease-in-out; }
+    transition: border .5s ease-in-out; }
 
 input:focus {
   outline: none; }
@@ -480,10 +483,13 @@ p {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  font-size: 18px; }
+  font-size: 16px; }
 
+@media all and (min-width: 600px) {
+  p {
+    font-size: 18px; } }
 .ipsum-text {
-  padding: 25px; }
+  padding: 15px; }
 
 footer {
   background-color: #a39161;
@@ -495,7 +501,7 @@ footer {
     margin-top: 0; }
   footer a {
     color: #fff;
-    text-decoration: none !important; }
+    text-decoration: underline; }
   footer hr {
     margin-top: 25px;
     margin-bottom: 25px;
@@ -504,9 +510,27 @@ footer {
     opacity: 0.5; }
   footer small {
     margin-top: 15px;
-    color: #fff; }
+    color: #fff;
+    max-width: 610px;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.4; }
 
 form {
   max-width: 600px;
   margin: 0 auto;
   position: relative; }
+
+#copy-btn {
+  opacity: 0.5;
+  cursor: not-allowed;
+  pointer-events: none; }
+  #copy-btn.active {
+    opacity: 1;
+    cursor: pointer;
+    pointer-events: auto; }
+
+.ipsum-empty {
+  display: none; }
+  .ipsum-empty.active {
+    display: block; }
