--- a/css/drake.css
+++ b/css/drake.css
@@ -476,6 +476,12 @@ input:focus {
 :-ms-input-placeholder {
   color: #ccc; }
 
+::selection {
+  background: #a39161; }
+
+::-moz-selection {
+  background: #a39161; }
+
 p {
   font-family: "Range Mono", Helvetica Neue, sans;
   color: #333;
