--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -221,6 +221,13 @@ form {
 	display: none;
 	&.active {
 		display: block;
+		padding: $space-15;
+	}
+}
+
+@media all and (min-width: 600px) {
+	.ipsum-empty {
+		padding: $space-25;
 	}
 }
 
